my-apps/development/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  parentRefs:
    - kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - excalidraw.vanillax.me
  rules:
    - backendRefs:
        - name: excalidraw
          port: 80
